--- a/src/scripts/data/assets/github/uncategorized.yaml
+++ b/src/scripts/data/assets/github/uncategorized.yaml
@@ -419,7 +419,7 @@ assets:
           r$: 2500
           r$$: 2500
           r$$$: 2500
-        submenu: Landmarks_Government
+        submenu: Landmarks/Government
         water: 150
         waterPollution: 2
         waterPollutionRadius: 2
@@ -690,7 +690,7 @@ assets:
           r$: 3000
           r$$: 3000
           r$$$: 3000
-        submenu: Parks_Plazas
+        submenu: Parks/Plazas
         water: 10
         waterPollution: 2
         waterPollutionRadius: 2
