--- a/src/scripts/data/assets/simtropolis/uncategorized.yaml
+++ b/src/scripts/data/assets/simtropolis/uncategorized.yaml
@@ -104,7 +104,7 @@ assets:
           - '26210000'
           - 25c40000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04c00000
@@ -153,7 +153,7 @@ assets:
           - '26060000'
           - 257d0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04c10000
@@ -210,7 +210,7 @@ assets:
           - 25f10000
           - '26270000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04c30000
@@ -269,7 +269,7 @@ assets:
           - 25ed0000
           - 25aa0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04c20000
@@ -332,7 +332,7 @@ assets:
           - 258c0000
           - 25b20000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2b960000
@@ -365,7 +365,6 @@ assets:
         ratingRadius: 440
         relief:
           im: 100000
-        submenu: Rewards
         water: 150
         waterPollution: 3
         waterPollutionRadius: 4
@@ -441,7 +440,7 @@ assets:
           - '25610000'
           - 25c60000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1--151c0000
@@ -523,7 +522,7 @@ assets:
           - 262c0000
           - 262b0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2b980000
@@ -578,7 +577,7 @@ assets:
         textures:
           - 258b0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b90000
@@ -626,7 +625,7 @@ assets:
           - 258f0000
           - 252b0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b80000
@@ -685,7 +684,7 @@ assets:
           - '26060000'
           - 25f40000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b70000
@@ -752,7 +751,7 @@ assets:
         textures:
           - 25db0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2bac0000
@@ -857,7 +856,7 @@ assets:
           - '26060000'
           - 257a0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2b9b0000
@@ -904,7 +903,7 @@ assets:
         textures:
           - '258e0000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b40000
@@ -952,7 +951,7 @@ assets:
         textures:
           - 25fb0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b30000
@@ -1005,7 +1004,7 @@ assets:
           - '25950000'
           - '25960000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04b10000
@@ -1058,7 +1057,7 @@ assets:
           - 25f40000
           - '25e90000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2bad0000
@@ -1117,7 +1116,7 @@ assets:
         textures:
           - 25d60000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04ac0000
@@ -1161,7 +1160,7 @@ assets:
         textures:
           - 252b0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04900000
@@ -1209,7 +1208,7 @@ assets:
         textures:
           - '26060000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04890000
@@ -1258,7 +1257,7 @@ assets:
           - 2d370000
         size: 4x3
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04880000
@@ -1291,7 +1290,7 @@ assets:
         power: 10
         rating: 7
         ratingRadius: 256
-        submenu: Landmarks_Religion
+        submenu: Landmarks/Religion
         water: 9
         waterPollution: 1
         waterPollutionRadius: 2
@@ -1323,7 +1322,7 @@ assets:
           - '26370000'
           - '26350000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2d3c0000
@@ -1360,7 +1359,7 @@ assets:
         power: 10
         rating: 7
         ratingRadius: 256
-        submenu: Landmarks_Religion
+        submenu: Landmarks/Religion
         water: 9
         waterPollution: 1
         waterPollutionRadius: 2
@@ -1387,7 +1386,7 @@ assets:
           - '25960000'
           - '26350000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04860000
@@ -1415,7 +1414,7 @@ assets:
         power: 10
         rating: 7
         ratingRadius: 256
-        submenu: Landmarks_Religion
+        submenu: Landmarks/Religion
         water: 9
         waterPollution: 1
         waterPollutionRadius: 2
@@ -1443,7 +1442,7 @@ assets:
           - 25fb0000
           - 25b40000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04850000
@@ -1471,7 +1470,7 @@ assets:
         power: 10
         rating: 7
         ratingRadius: 256
-        submenu: Landmarks_Religion
+        submenu: Landmarks/Religion
         water: 9
         waterPollution: 1
         waterPollutionRadius: 2
@@ -1499,7 +1498,7 @@ assets:
           - '26110000'
           - '26140000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-04840000
@@ -1587,7 +1586,7 @@ assets:
           - '25950000'
           - 256c0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-6cd8b254-002f0000
@@ -1678,7 +1677,7 @@ assets:
           - 25f80000
           - 25b00000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-6cd8b254-002d0000
@@ -1928,7 +1927,7 @@ assets:
           - 257c0000
           - '25800000'
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-badb57f1-2d100000
@@ -2104,7 +2103,7 @@ assets:
           - '1e810000'
           - 1e7e0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-6cd8b254-002e0000
@@ -2180,7 +2179,7 @@ assets:
           - 25ba0000
           - 251c0000
     meta:
-      timestamp: 2024-11-26T21:04:04.961Z
+      timestamp: 2024-11-27T09:17:21.435Z
       version: 1
     models:
       - 5ad0e817-ad1d67dc-00030000
