--- a/src/scripts/data/assets/simtropolis/112-gameplay-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/112-gameplay-mods.yaml
@@ -2965,6 +2965,7 @@ assets:
         relief:
           r$$: 10000
           r$$$: 10000
+        submenu: Rewards
         water: 210
         waterPollution: 2
         waterPollutionRadius: 4
