Base game indexing

--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -1126,6 +1126,7 @@ simtropolis/21340-functional-landmarks-complete-set-v10:
       override: true
       packageId: maxis/adler-planetarium
       variantId: functional
+    AllInOne.dat: null
     ArcDeTriomphe.dat:
       override: true
       packageId: maxis/arc-de-triomphe
